2009-12-07  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.3
	* Fixed faulty clean rule for new schemas file: (LP: #493132)
	* Better ATSC support

2009-12-06  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.2
	* Added option to remove colon from recording filenames (LP: #491602)
	* Fixed type mismatch on show_epg_tooltips

2009-11-29  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.1
	* Updated intltool
	* Applied Martin Pitt's patch for duplicate ids
	* Updated include order in channels.h to allow compile in recent kernel
	* Ignoring scheduled recording check for same scheduled recording (LP: #437142)
	* Added iIGNORE_SQLITE3_THREADSAFE_CHECK to disable sqlite3_threadsafe check for Hardy compile (LP: #433996)
	* Added support for EPG in Hong Kong from Raymond Tau (LP: #477388)
	* Set timeout for EPG events to 1 second (LP: #434994) 
	* Moved DB to .local/share/me-tv (LP: #486247) 
	* Added schema file for GConf (LP: #460612)
	* Default channel on startup and device change is now device specific (LP: #486838)

2009-08-10  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.0
	* Reimplemented menus/toolbars in UIManager
	* Added menu accelerators
	* Added Channel Up/Down and "Change View Mode" menu items 
	* Using a configurable deinterlacer rather than the hard-coded tvtime
	* Added French translation

2009-08-01  Scott Evans <scott@vk7hse.hobby-site.org>

	* 0.10.3
	* Changed default read timeout to 15 seconds

2009-07-28  Scott Evans <scott@vk7hse.hobby-site.org>

	* 0.10.2
	* Fix for Lenny compile

2009-07-22  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.10.0
	* Now using a custom xine player
	* Fixed mute on channel change issue
	* Fixed video size issues on startup
	* Added channel changing by key bindings

2009-07-07  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.6
	* Scheduled recordings/EPG events are now deleted when the channel is deleted
	* An attempt to make the scan/import more friendly to duplicate channel names