@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2009-12-07" "1.0.3" "Me TV Manual"
+.TH "ME TV" 1 "2009-12-15" "1.0.3" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
